# Secure-Blockchain-Ledger-with-Proof-of-Work-and-Encrypted-Wallets

./: .gitignore  CMakeLists.txt  README.md
data/: chain.json
src/: block.cpp  block.h  blockchain.cpp  blockchain.h  crypto_utils.cpp  crypto_utils.h  main.cpp  transaction.cpp  transaction.h  wallet.cpp  wallet.h
